Using classes insted of ids

--- a/client/lib/components/user_unavailabilities/leave_requests/leave_request_item/view.html
+++ b/client/lib/components/user_unavailabilities/leave_requests/leave_request_item/view.html
@@ -46,7 +46,7 @@
 
             <!-- Delete button -->
             <div class="row">
-              <i id="removeLeaveRequestBtn" class="fa fa-trash-o delete-icon pull-right" role="button"></i>
+              <i class="remove-leave-request-button fa fa-trash-o delete-icon pull-right" role="button"></i>
             </div>
           </div>
         </div>
