--- a/client/lib/components/user_unavailabilities/view.html
+++ b/client/lib/components/user_unavailabilities/view.html
@@ -4,7 +4,7 @@
     <!-- User info -->
     <div class="user-info-wrapper col-md-offset-1">
       <div class="profile-image">
-        <img alt="image" id="profilePicture" class="img-responsive" src="{{state$profileImgSrc}}">
+        <img alt="image" class="img-responsive" src="{{state$profileImgSrc}}">
       </div>
       <div class="ibox-content profile-content">
         <h4>
