--- a/client/stylesheets/components/user_unavailable.less
+++ b/client/stylesheets/components/user_unavailable.less
@@ -20,7 +20,7 @@
   .component-wrapper {
     margin-top: 20px;
     .component-header {
-      #newItemBtn {
+      .new-item-button {
         margin-right: -15px;
       }
     }
@@ -97,7 +97,7 @@
 
 .new-unavailability {
   .user-unavailability-general;
-  #endTimePicker {
+  .end-time-picker {
     margin-top: 5px;
   }
 }
