--- a/client/lib/components/user_unavailabilities/leave_requests/view_leave_request/view.html
+++ b/client/lib/components/user_unavailabilities/leave_requests/view_leave_request/view.html
@@ -1,6 +1,6 @@
 <template name="viewLeaveRequest">
   <div class="panel-body new-leaveRequest">
-    <form class="form-horizontal">
+    <form class="form-horizontal leave-request-form">
 
       <!-- Start Date -->
       <div class="form-group col-md-12">
@@ -11,7 +11,7 @@
         </div>
         <div class="row">
           <div class="col-md-9">
-            <div id="startDatePicker" class="input-group">
+            <div class="start-date-picker input-group">
               <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
               <input class="set-due-date form-control" type="text"/>
             </div>
@@ -28,7 +28,7 @@
         </div>
         <div class="row">
           <div class="col-md-9">
-            <div id="endDatePicker" class="input-group">
+            <div class="end-date-picker input-group">
               <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
               <input class="set-due-date form-control" type="text"/>
             </div>
@@ -46,9 +46,9 @@
         <div class="row">
           <div class="col-md-12">
             {{#if state$isReviewMode}}
-              <input id="commentInputText" class="form-control" type="text" readonly value="{{state$leaveRequest.comment}}">
+              <input class="comment-input form-control" type="text" readonly value="{{state$leaveRequest.comment}}">
             {{else}}
-              <input id="commentInputText" class="form-control" type="text">
+              <input class="comment-input form-control" type="text">
             {{/if}}
           </div>
         </div>
@@ -60,10 +60,10 @@
           <div class="form-group col-md-12">
             <div class="row">
               <div class="col-md-6 approve-decline-btn-wrapper">
-                <button id="approveBtn" class="btn btn-white pull-right" type="button">Approve</button>
+                <button class="approve-button btn btn-white pull-right" type="button">Approve</button>
               </div>
               <div class="col-md-6 approve-decline-btn-wrapper">
-                <button id="declineBtn" class="btn btn-white pull-left" type="button">Decline</button>
+                <button class="decline-button btn btn-white pull-left" type="button">Decline</button>
               </div>
             </div>
           </div>
@@ -80,7 +80,7 @@
           </div>
           <div class="row">
             <div class="col-md-12">
-              <select id="notifyManagerSelect" class="form-control">
+              <select class="notify-manager-select form-control">
                 {{#each state$managers}}
                   <option value={{this._id}}>{{this.username}}</option>
                 {{/each}}
@@ -93,7 +93,7 @@
         <div class="form-group col-md-12">
           <div class="row">
             <div class="col-md-4 col-md-offset-8">
-              <button id="cancelBtn" type="button" class="btn btn-primary pull-left btn-white">Cancel</button>
+              <button type="button" class="cancel-button btn btn-primary pull-left btn-white">Cancel</button>
               <button type="submit" class="btn btn-primary pull-right">
                 Add
               </button>
