--- a/client/lib/components/user_unavailabilities/unavailabilitiesOrLeaveRequestsComponent/view.html
+++ b/client/lib/components/user_unavailabilities/unavailabilitiesOrLeaveRequestsComponent/view.html
@@ -9,7 +9,7 @@
 
       <!-- Add new item button -->
       <div class="col-md-5">
-        <button id="newItemBtn" class="pull-right btn btn-primary btn-xs">Add new</button>
+        <button class="new-item-button pull-right btn btn-primary btn-xs">Add new</button>
       </div>
     </div>
 
