--- a/client/lib/components/common/week_picker/view.html
+++ b/client/lib/components/common/week_picker/view.html
@@ -2,11 +2,16 @@
   <div class="btn-group week-picker-component" role="group">
     <span class="btn btn-white previous-week"><i class="fa fa-chevron-left"></i></span>
 
-    <button type="button"
-            class="btn btn-white datepicker">
-      {{state$currentWeekStr}}
-      <span class="caret"></span>
-    </button>
+
+    <div class="input-group date date-picker-container">
+      <input type="text" class="form-control"/>
+      <button type="button"
+              class="btn btn-white date-picker-button">
+        {{state$currentWeekStr}}
+        <span class="caret"></span>
+      </button>
+    </div>
+
 
     <span class="btn btn-white next-week"><i class="fa fa-chevron-right"></i></span>
   </div>
