Fixed week picker

--- a/client/stylesheets/components/week-picker.less
+++ b/client/stylesheets/components/week-picker.less
@@ -1,5 +1,8 @@
 .week-picker-component {
-  .datepicker {
-    padding: 6px;
+  position: relative;
+
+  .date-picker-input {
+    position: absolute;
+    visibility: hidden;
   }
 }
