--- a/client/lib/components/common/week_picker/view.html
+++ b/client/lib/components/common/week_picker/view.html
@@ -1,17 +1,14 @@
 <template name="weekPicker">
   <div class="btn-group week-picker-component" role="group">
+    <input type="text" class="form-control date-picker-input"/>
+
     <span class="btn btn-white previous-week"><i class="fa fa-chevron-left"></i></span>
 
-
-    <div class="input-group date date-picker-container">
-      <input type="text" class="form-control"/>
-      <button type="button"
-              class="btn btn-white date-picker-button">
-        {{state$currentWeekStr}}
-        <span class="caret"></span>
-      </button>
-    </div>
-
+    <button type="button"
+            class="btn btn-white date-picker-button">
+      {{state$currentWeekStr}}
+      <span class="caret"></span>
+    </button>
 
     <span class="btn btn-white next-week"><i class="fa fa-chevron-right"></i></span>
   </div>
