--- a/client/lib/components/user_unavailabilities/view.html
+++ b/client/lib/components/user_unavailabilities/view.html
@@ -1,6 +1,9 @@
 <template name="userUnavailability">
   <div class="panel-body user-unavailability">
-
+    <!-- need a header -->
+    <button class="close-flyout-button">
+      <i class="fa fa-angle-right"></i>
+    </button>
     <!-- User info -->
     <div class="user-info-wrapper col-md-offset-1">
       <div class="profile-image">
