--- a/client/stylesheets/components/user_unavailable.less
+++ b/client/stylesheets/components/user_unavailable.less
@@ -102,7 +102,7 @@
   }
 }
 
-.new-leaveRequest {
+.view-leave-request {
   .user-unavailability-general;
   .approve-decline-btn-wrapper {
     padding-right: 0;
