--- a/client/lib/components/navigations/top/view.html
+++ b/client/lib/components/navigations/top/view.html
@@ -13,6 +13,9 @@
             </span>
           </li>
           <li>
+            <a class="count-info user-unavailabilities-flyout"><i class="fa fa-user-times"></i></a>
+          </li>
+          <li>
             <a class="count-info organization-structure-flyout"><i class="fa fa-sitemap"></i></a>
           </li>
         {{/if}}
