--- a/client/lib/components/user_unavailabilities/leave_requests/view_leave_request/view.html
+++ b/client/lib/components/user_unavailabilities/leave_requests/view_leave_request/view.html
@@ -1,5 +1,9 @@
 <template name="viewLeaveRequest">
-  <div class="panel-body new-leaveRequest">
+  <div class="panel-body view-leave-request">
+    <!-- need a header -->
+    <button class="close-flyout-button">
+      <i class="fa fa-angle-right"></i>
+    </button>
     <form class="form-horizontal leave-request-form">
 
       <!-- Start Date -->
@@ -93,7 +97,7 @@
         <div class="form-group col-md-12">
           <div class="row">
             <div class="col-md-4 col-md-offset-8">
-              <button type="button" class="cancel-button btn btn-primary pull-left btn-white">Cancel</button>
+              <button type="button" class="cancel-button btn btn-primary pull-left btn-white close-flyout-button">Cancel</button>
               <button type="submit" class="btn btn-primary pull-right">
                 Add
               </button>
