--- a/client/lib/components/user_unavailabilities/leave_requests/view_leave_request/view.html
+++ b/client/lib/components/user_unavailabilities/leave_requests/view_leave_request/view.html
@@ -1,110 +1,111 @@
 <template name="viewLeaveRequest">
-  <div class="panel-body view-leave-request">
-    <!-- need a header -->
-    <button class="close-flyout-button">
-      <i class="fa fa-angle-right"></i>
-    </button>
-    <form class="form-horizontal leave-request-form">
+  {{> render component="unavailabilitiesFlyoutHeader" title="Leave Request"}}
+  <div class="flyout-content">
+    <div class="panel-body view-leave-request">
+      <form class="form-horizontal leave-request-form">
 
-      <!-- Start Date -->
-      <div class="form-group col-md-12">
-        <div class="row">
-          <div class="col-md-12">
-            <label>Start date</label>
+        <!-- Start Date -->
+        <div class="form-group col-md-12">
+          <div class="row">
+            <div class="col-md-12">
+              <label>Start date</label>
+            </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-md-9">
-            <div class="start-date-picker input-group">
-              <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-              <input class="set-due-date form-control" type="text"/>
+          <div class="row">
+            <div class="col-md-9">
+              <div class="start-date-picker input-group">
+                <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                <input class="set-due-date form-control" type="text"/>
+              </div>
             </div>
           </div>
         </div>
-      </div>
 
-      <!-- End Date -->
-      <div class="form-group col-md-12">
-        <div class="row">
-          <div class="col-md-12">
-            <label>End date</label>
+        <!-- End Date -->
+        <div class="form-group col-md-12">
+          <div class="row">
+            <div class="col-md-12">
+              <label>End date</label>
+            </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-md-9">
-            <div class="end-date-picker input-group">
-              <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-              <input class="set-due-date form-control" type="text"/>
+          <div class="row">
+            <div class="col-md-9">
+              <div class="end-date-picker input-group">
+                <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                <input class="set-due-date form-control" type="text"/>
+              </div>
             </div>
           </div>
         </div>
-      </div>
 
-      <!-- Comment -->
-      <div class="form-group col-md-12">
-        <div class="row">
-          <div class="col-md-12">
-            <label>Comment</label>
+        <!-- Comment -->
+        <div class="form-group col-md-12">
+          <div class="row">
+            <div class="col-md-12">
+              <label>Comment</label>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12">
+              {{#if state$isReviewMode}}
+                <input class="comment-input form-control" type="text" readonly value="{{state$leaveRequest.comment}}">
+              {{else}}
+                <input class="comment-input form-control" type="text">
+              {{/if}}
+            </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-md-12">
-            {{#if state$isReviewMode}}
-              <input class="comment-input form-control" type="text" readonly value="{{state$leaveRequest.comment}}">
-            {{else}}
-              <input class="comment-input form-control" type="text">
-            {{/if}}
-          </div>
-        </div>
-      </div>
 
-      <!-- Approve/Decline -->
-      {{#if state$isReviewMode}}
-        {{#if state$canBeApprovedOrDeclined}}
+        <!-- Approve/Decline -->
+        {{#if state$isReviewMode}}
+          {{#if state$canBeApprovedOrDeclined}}
+            <div class="form-group col-md-12">
+              <div class="row">
+                <div class="col-md-6 approve-decline-btn-wrapper">
+                  <button class="approve-button btn btn-white pull-right" type="button">Approve</button>
+                </div>
+                <div class="col-md-6 approve-decline-btn-wrapper">
+                  <button class="decline-button btn btn-white pull-left" type="button">Decline</button>
+                </div>
+              </div>
+            </div>
+          {{/if}}
+        {{/if}}
+
+        {{#unless state$isReviewMode}}
+          <!-- Notify manager -->
           <div class="form-group col-md-12">
             <div class="row">
-              <div class="col-md-6 approve-decline-btn-wrapper">
-                <button class="approve-button btn btn-white pull-right" type="button">Approve</button>
-              </div>
-              <div class="col-md-6 approve-decline-btn-wrapper">
-                <button class="decline-button btn btn-white pull-left" type="button">Decline</button>
+              <div class="col-md-12">
+                <label>Notify manager</label>
               </div>
             </div>
+            <div class="row">
+              <div class="col-md-12">
+                <select class="notify-manager-select form-control">
+                  {{#each state$managers}}
+                    <option value={{this._id}}>{{this.username}}</option>
+                  {{/each}}
+                </select>
+              </div>
+            </div>
           </div>
-        {{/if}}
-      {{/if}}
 
-      {{#unless state$isReviewMode}}
-        <!-- Notify manager -->
-        <div class="form-group col-md-12">
-          <div class="row">
-            <div class="col-md-12">
-              <label>Notify manager</label>
+          <!-- Submit/cancel -->
+          <div class="form-group col-md-12">
+            <div class="row">
+              <div class="col-md-4 col-md-offset-8">
+                <button type="button" class="cancel-button btn btn-primary pull-left btn-white close-flyout-button">
+                  Cancel
+                </button>
+                <button type="submit" class="btn btn-primary pull-right">
+                  Add
+                </button>
+              </div>
             </div>
           </div>
-          <div class="row">
-            <div class="col-md-12">
-              <select class="notify-manager-select form-control">
-                {{#each state$managers}}
-                  <option value={{this._id}}>{{this.username}}</option>
-                {{/each}}
-              </select>
-            </div>
-          </div>
-        </div>
-
-        <!-- Submit/cancel -->
-        <div class="form-group col-md-12">
-          <div class="row">
-            <div class="col-md-4 col-md-offset-8">
-              <button type="button" class="cancel-button btn btn-primary pull-left btn-white close-flyout-button">Cancel</button>
-              <button type="submit" class="btn btn-primary pull-right">
-                Add
-              </button>
-            </div>
-          </div>
-        </div>
-      {{/unless}}
-    </form>
+        {{/unless}}
+      </form>
+    </div>
   </div>
 </template>
