--- a/client/lib/components/user_unavailabilities/unavailabilities/new_unavailability/view.html
+++ b/client/lib/components/user_unavailabilities/unavailabilities/new_unavailability/view.html
@@ -1,89 +1,90 @@
 <template name="addNewUnavailability">
-  <div class="panel-body new-unavailability">
-    <!-- need a header -->
-    <button class="close-flyout-button">
-      <i class="fa fa-angle-right"></i>
-    </button>
-    <form class="form-horizontal unavailability-form">
+  {{> render component="unavailabilitiesFlyoutHeader" title="Unavailability"}}
+  <div class="flyout-content">
+    <div class="panel-body new-unavailability">
+      <form class="form-horizontal unavailability-form">
 
-      <!-- Date -->
-      <div class="form-group col-md-12">
-        <div class="row">
-          <div class="col-md-12">
-            <label>Date</label>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-9">
-            <div class="date-picker input-group">
-              <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-              <input class="set-due-date form-control" type="text"/>
+        <!-- Date -->
+        <div class="form-group col-md-12">
+          <div class="row">
+            <div class="col-md-12">
+              <label>Date</label>
             </div>
           </div>
-          <div class="col-md-3">
-            <div class="col-md-6">
-              <input type="checkbox" class="all-day-checkbox">
+          <div class="row">
+            <div class="col-md-9">
+              <div class="date-picker input-group">
+                <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                <input class="set-due-date form-control" type="text"/>
+              </div>
             </div>
-            <div class="col-md-6">
-              <label>All day?</label>
+            <div class="col-md-3">
+              <div class="col-md-6">
+                <input type="checkbox" class="all-day-checkbox">
+              </div>
+              <div class="col-md-6">
+                <label>All day?</label>
+              </div>
             </div>
           </div>
         </div>
-      </div>
 
-      <!-- Time -->
-      <div class="form-group col-md-12 {{state$timePickerVisibility}}">
-        <div class="start-time-picker input-group">
-          <span class="input-group-addon"><i class="glyphicon glyphicon-time"></i></span>
-          <input class="set-due-date form-control" type="text"/>
+        <!-- Time -->
+        <div class="form-group col-md-12 {{state$timePickerVisibility}}">
+          <div class="start-time-picker input-group">
+            <span class="input-group-addon"><i class="glyphicon glyphicon-time"></i></span>
+            <input class="set-due-date form-control" type="text"/>
+          </div>
+          <div class="end-time-picker input-group">
+            <span class="input-group-addon"><i class="glyphicon glyphicon-time"></i></span>
+            <input class="set-due-date form-control" type="text"/>
+          </div>
         </div>
-        <div class="end-time-picker input-group">
-          <span class="input-group-addon"><i class="glyphicon glyphicon-time"></i></span>
-          <input class="set-due-date form-control" type="text"/>
-        </div>
-      </div>
 
-      <!-- Repeats -->
-      <div class="form-group col-md-12">
-        <div class="row">
-          <div class="col-md-12">
-            <label>Repeat</label>
+        <!-- Repeats -->
+        <div class="form-group col-md-12">
+          <div class="row">
+            <div class="col-md-12">
+              <label>Repeat</label>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12">
+              <select class="repeat-select form-control">
+                <option value="never">Never</option>
+                <option value="weekly">Weekly</option>
+                <option value="monthly">Monthly</option>
+              </select>
+            </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-md-12">
-            <select class="repeat-select form-control">
-              <option value="never">Never</option>
-              <option value="weekly">Weekly</option>
-              <option value="monthly">Monthly</option>
-            </select>
-          </div>
-        </div>
-      </div>
 
-      <!-- Comment -->
-      <div class="form-group col-md-12">
-        <div class="row">
-          <div class="col-md-12">
-            <label>Comment</label>
+        <!-- Comment -->
+        <div class="form-group col-md-12">
+          <div class="row">
+            <div class="col-md-12">
+              <label>Comment</label>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12">
+              <input class="comment-input form-control" type="text">
+            </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-md-12">
-            <input class="comment-input form-control" type="text">
-          </div>
-        </div>
-      </div>
 
-      <!-- Submit/cancel -->
-      <div class="form-group col-md-12">
-        <div class="row">
-          <div class="col-md-4 col-md-offset-8">
-            <button type="button" class="cancel-button btn btn-primary pull-left btn-white close-flyout-button">Cancel</button>
-            <button type="submit" class="btn btn-primary pull-right">Add</button>
+        <!-- Submit/cancel -->
+        <div class="form-group col-md-12">
+          <div class="row">
+            <div class="col-md-4 col-md-offset-8">
+              <button type="button" class="cancel-button btn btn-primary pull-left btn-white close-flyout-button">
+                Cancel
+              </button>
+              <button type="submit" class="btn btn-primary pull-right">Add</button>
+            </div>
           </div>
         </div>
-      </div>
-    </form>
+      </form>
+    </div>
   </div>
 </template>
