--- a/client/lib/components/user_unavailabilities/view.html
+++ b/client/lib/components/user_unavailabilities/view.html
@@ -1,25 +1,24 @@
 <template name="userUnavailability">
-  <div class="panel-body user-unavailability">
-    <!-- need a header -->
-    <button class="close-flyout-button">
-      <i class="fa fa-angle-right"></i>
-    </button>
-    <!-- User info -->
-    <div class="user-info-wrapper col-md-offset-1">
-      <div class="profile-image">
-        <img alt="image" class="img-responsive" src="{{state$profileImgSrc}}">
+  {{> render component="unavailabilitiesFlyoutHeader" title="Unavailabilities and leave requests"}}
+  <div class="flyout-content">
+    <div class="panel-body user-unavailability">
+      <!-- User info -->
+      <div class="user-info-wrapper col-md-offset-1">
+        <div class="profile-image">
+          <img alt="image" class="img-responsive" src="{{state$profileImgSrc}}">
+        </div>
+        <div class="ibox-content profile-content">
+          <h4>
+            <strong>
+              {{username state$userName}}
+            </strong>
+          </h4>
+        </div>
       </div>
-      <div class="ibox-content profile-content">
-        <h4>
-          <strong>
-            {{username state$userName}}
-          </strong>
-        </h4>
-      </div>
-    </div>
 
-    <!-- Components with unavailables and leave requests -->
-    {{> render component="unavailabilitiesOrLeaveRequestsComponent" type="unavailabilities"}}
-    {{> render component="unavailabilitiesOrLeaveRequestsComponent" type="leaveRequests"}}
+      <!-- Components with unavailables and leave requests -->
+      {{> render component="unavailabilitiesOrLeaveRequestsComponent" type="unavailabilities"}}
+      {{> render component="unavailabilitiesOrLeaveRequestsComponent" type="leaveRequests"}}
+    </div>
   </div>
 </template>
