--- a/server/lib/notifications/templates/test.handlebars
+++ b/server/lib/notifications/templates/test.handlebars
@@ -5,5 +5,20 @@
     This is notification paragraph test
   </p>
 
+  <p>
+    Check list rendering
+  <ul>
+    {{#each persons}}
+      <li>{{greeting}}</li>
+    {{/each}}
+
+  </ul>
+
+  end of list
+  </p>
+
   other: {{_notificationId}}
+  <p>
+    <a href="{{menuItemUrl}}">menu item url</a>
+  </p>
 </div>
