--- a/server/lib/notifications/templates/claim-shift.handlebars
+++ b/server/lib/notifications/templates/claim-shift.handlebars
@@ -1,7 +1,33 @@
+<style>
+  .button-container {
+    margin-top: 5px;
+  }
+
+  .claim-button {
+    margin-top: 5px;
+    padding: 3px 5px;
+    color: #fff;
+    border-radius: 4px;
+  }
+
+  .claim-button:hover {
+    color: #fff;
+  }
+
+  .confirm-button {
+    background-color: #1AB394;
+  }
+
+  .reject-button {
+    background-color: #ED5565;
+  }
+</style>
+
 <div>
-  Shift on {{date}} has been claimed by {{username}}
-  <p>
-    <a href="{{confirmRoute}}">Confirm</a>
-    <a href="{{rejectRoute}}">Reject</a>
+  Shift on {{date}} has been claimed by <b>{{username}}</b>
+
+  <p class="button-container">
+    <a href="{{claimUrl 'confirm'}}" class="claim-button confirm-button">Confirm</a>
+    <a href="{{claimUrl 'reject'}}" class="claim-button reject-button">Reject</a>
   </p>
 </div>
