View for leave request, sending notifications(without approve/decline buttons)

--- a/client/lib/components/user_unavailabilities/leave_requests/view_leave_request/view.html
+++ b/client/lib/components/user_unavailabilities/leave_requests/view_leave_request/view.html
@@ -1,5 +1,8 @@
 <template name="viewLeaveRequest">
-  {{> render component="unavailabilitiesFlyoutHeader" title="Leave Request"}}
+  <!-- Flayout header -->
+  {{#unless state$isReviewMode}}
+    {{> render component="unavailabilitiesFlyoutHeader" title="Leave Request"}}
+  {{/unless}}
   <div class="flyout-content">
     <div class="panel-body view-leave-request">
       <form class="form-horizontal leave-request-form">
@@ -13,10 +16,14 @@
           </div>
           <div class="row">
             <div class="col-md-9">
-              <div class="start-date-picker input-group">
-                <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-                <input class="set-due-date form-control" type="text"/>
-              </div>
+              {{#if state$isReviewMode}}
+                <input class="comment-input form-control" type="text" readonly value="{{state$formatDate state$leaveRequest.startDate}}">
+              {{else}}
+                <div class="start-date-picker input-group">
+                  <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                  <input class="set-due-date form-control" type="text"/>
+                </div>
+              {{/if}}
             </div>
           </div>
         </div>
@@ -30,10 +37,14 @@
           </div>
           <div class="row">
             <div class="col-md-9">
-              <div class="end-date-picker input-group">
-                <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-                <input class="set-due-date form-control" type="text"/>
-              </div>
+              {{#if state$isReviewMode}}
+                <input class="comment-input form-control" type="text" readonly value="{{state$formatDate state$leaveRequest.endDate}}">
+              {{else}}
+                <div class="end-date-picker input-group">
+                  <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                  <input class="set-due-date form-control" type="text"/>
+                </div>
+              {{/if}}
             </div>
           </div>
         </div>
