Added small exmaple for notifications

--- a/server/lib/notifications/templates/test.handlebars
+++ b/server/lib/notifications/templates/test.handlebars
@@ -1,24 +1,6 @@
 <div>
-  Hello, {{username}}
-
   <p>
-    This is notification paragraph test
+    This is interactive action test:
   </p>
-
-  <p>
-    Check list rendering
-  <ul>
-    {{#each persons}}
-      <li>{{greeting}}</li>
-    {{/each}}
-
-  </ul>
-
-  end of list
-  </p>
-
-  other: {{_notificationId}}
-  <p>
-    <a href="{{menuItemUrl}}">menu item url</a>
-  </p>
+  <a href="{{makeActionUrl}}">Click here to perform action</a>
 </div>
