Buttons for approve/decline in notification

--- a/server/lib/notifications/templates/leave_request.handlebars
+++ b/server/lib/notifications/templates/leave_request.handlebars
@@ -6,7 +6,7 @@
   <p>Please, review my <a type="link" href="{{leaveRequestLink}}">leave request</a>.</p>
 
   <div>
-    <button><a href="{{approveLeaveRequestLink}}" target="_blank">Approve</a></button>
-    <button><a href="{{declineLeaveRequestLink}}" target="_blank">Decline</a></button>
+    <button><a href="{{approveLeaveRequestUrl}}" target="_blank">Approve</a></button>
+    <button><a href="{{declineLeaveRequestUrl}}" target="_blank">Decline</a></button>
   </div>
 </div>
