--- a/client/lib/components/stocktake/new_stocktake/view.html
+++ b/client/lib/components/stocktake/new_stocktake/view.html
@@ -11,7 +11,7 @@
           <br>
           <div class="pull-right">
             <button class="btn btn-small btn-primary createNewStocktake">Create new stocktake</button>
-            <button class="btn btn-small btn-primary gotoExistingStocktake">Go to latest exisiting stocktake</button>
+            <button class="btn btn-small btn-primary gotoExistingStocktake">Go to latest existing stocktake</button>
           </div>
           <br><br>
         </div>
