Area settings fix

--- a/client/lib/components/organizations/areas/area_settings/view.html
+++ b/client/lib/components/organizations/areas/area_settings/view.html
@@ -3,7 +3,7 @@
     <button class="close-flyout-button">
       <i class="fa fa-angle-right"></i>
     </button>
-    {{state$location.name}} location settings
+    {{state$area.name}} settings
   </div>
 
   <div class="flyout-content">
