--- a/client/lib/components/job-items/detail/ingredients-view/view.html
+++ b/client/lib/components/job-items/detail/ingredients-view/view.html
@@ -1,9 +1,7 @@
 <template name="ingredientItemView">
   <tr>
-    <td>{{state$ing.code}}</td>
+    <td>{{state$quantity}} {{state$ing.portionUsed}}</td>
     <td>{{state$ing.description}}</td>
-    <td>{{state$quantity}}</td>
-    <td>{{state$ing.portionUsed}}</td>
     <td>$ {{state$cost}}</td>
   </tr>
 </template>
