--- a/client/lib/components/user_unavailabilities/leave_requests/leave_request_item/view.html
+++ b/client/lib/components/user_unavailabilities/leave_requests/leave_request_item/view.html
@@ -39,8 +39,8 @@
 
             <!-- Leave request status -->
             <div class="row">
-              <p class="{{state$status.style}} pull-right">
-                {{state$status.text}}
+              <p class="status-{{state$status}} pull-right text-capitalize">
+                {{state$status}}
               </p>
             </div>
 
