--- a/client/stylesheets/components/forecast.less
+++ b/client/stylesheets/components/forecast.less
@@ -17,6 +17,12 @@
     .panel;
     table {
       margin-bottom: 0;
+
+      .prediction-cell {
+        .ghost-editable-input {
+          width: 35px;
+        }
+      }
     }
   }
 
