Changed send email button

--- a/client/lib/components/email/view.html
+++ b/client/lib/components/email/view.html
@@ -36,11 +36,11 @@
           {{> render component="textEditor" id='composeMailEditorSubmit' initialHtml=state$initialHTML}}
 
           <div class="mail-body text-right tooltip-demo">
-            <a href="#" class="btn btn-sm btn-primary sendEmail" data-toggle="tooltip" data-placement="top" title="Send">
-              <i class="fa fa-reply"></i> Send
-            </a>
             <a href="#" class="btn btn-white btn-sm" data-dismiss="modal" data-toggle="tooltip" data-placement="top" title="Discard email">
               <i class="fa fa-times"></i> Discard
+            </a>
+            <a href="#" class="btn btn-sm btn-primary sendEmail" data-toggle="tooltip" data-placement="top" title="Send">
+              <i class="fa fa-share"></i> Send
             </a>
           </div>
           <div class="clearfix"></div>
