manual prediction indicator

--- a/client/stylesheets/components/forecast.less
+++ b/client/stylesheets/components/forecast.less
@@ -22,6 +22,10 @@
         .ghost-editable-input {
           width: 35px;
         }
+
+        .manual-prediction-icon {
+          color: #F2D600;
+        }
       }
     }
   }
