Improved ghost editable

--- a/client/stylesheets/components/ghost-editable.less
+++ b/client/stylesheets/components/ghost-editable.less
@@ -16,4 +16,12 @@
       outline: 1px solid @navy;
     }
   }
+
+  .submit-value-button {
+    color: @navy;
+  }
+
+  .hide-button {
+    display: none;
+  }
 }
