Small improvements in forecast

--- a/client/lib/components/prediction/sales-row/sales-cell/view.html
+++ b/client/lib/components/prediction/sales-row/sales-cell/view.html
@@ -2,12 +2,12 @@
   {{#with state$dailySale}}
     <td class="prediction-cell">
       {{#if state$isFuturePrediction}}
-        {{> render component="ghostEditable" value=predictionQuantity onValueChanged=state$onPredictedValueChangedCb}}
+        {{> render component="ghostEditable" value=state$predictionQuantity onValueChanged=state$onPredictedValueChangedCb}}
       {{else}}
-        {{predictionQuantity}}
+        {{state$predictionQuantity}}
       {{/if}}
       {{#if isPredictionManual}}
-        <i class="fa fa-pencil-square manual-prediction-icon" title="This prediction is manual"></i>
+        <i class="fa fa-pencil-square manual-prediction-icon remove-manual-prediction-button" title="This prediction is manual"></i>
       {{/if}}
     </td>
     <td>{{actualQuantity}}</td>
