Moved view buttons and checkboxes to the left

--- a/client/lib/components/job-items/submit/view.html
+++ b/client/lib/components/job-items/submit/view.html
@@ -203,7 +203,7 @@
       </div>
       <div class="row">
         <div class="col-sm-4 col-sm-offset-2">
-          <button class="btn btn-white" type="button">Cancel</button>
+          <a href="{{pathFor route='jobItemsMaster'}}" class="btn btn-white" type="button">Cancel</a>
           <button class="btn btn-primary" type="submit">Save changes</button>
         </div>
       </div>
