--- a/client/lib/components/job-items/master_list/item/view.html
+++ b/client/lib/components/job-items/master_list/item/view.html
@@ -1,6 +1,11 @@
 <template name="jobItemDetailed">
   <tr data-id="{{state$job._id}}">
-    <td><a href="#" data-toggle="modal" class="viewDetail">{{{state$job.name}}}</a></td>
+    <td>
+      <button class="btn btn-primary btn-sm viewDetail" title="View Item">
+        <i class="fa fa-eye"></i> View
+      </button>
+    </td>
+    <td>{{state$job.name}}</td>
     <td>{{secondsToMinutes state$job.activeTime}} mins</td>
     {{#if state$showSection}}
       <td>{{sectionById state$job.section}}</td>
@@ -8,12 +13,7 @@
     {{else}}
       <td>{{#if state$job.shelfLife}}{{state$job.shelfLife}} days {{else}} -NA- {{/if}}</td>
       <td>{{#if state$job.portions}} {{state$job.portions}} {{else}} -NA- {{/if}}</td>
-      <td>{{#if state$isPrep}} $ {{state$cost}} {{else}} -NA-{{/if}}</td>
+      <td>{{#if state$isPrep}}${{state$cost}}{{else}}-NA-{{/if}}</td>
     {{/if}}
-    <td>
-      <button class="btn btn-primary btn-sm viewDetail" title="View Item">
-        <i class="fa fa-eye"></i> View
-      </button>
-    </td>
   </tr>
 </template>
