--- a/client/lib/components/stocktake/master_list/list/view.html
+++ b/client/lib/components/stocktake/master_list/list/view.html
@@ -2,24 +2,26 @@
   <div class="col-lg-12">
     <div class="ibox ">
       <div class="ibox-content">
-        <table class="table table-condensed table-hover table-striped">
-          <thead>
+        <div class="table-responsive">
+          <table class="table table-condensed table-hover table-striped">
+            <thead>
             <tr>
               <th>Date</th>
               <th>Total Stock Value</th>
               <th>Action</th>
             </tr>
-          </thead>
-          {{#if state$listOfDates}}
-          <tbody>
-            {{#each state$listOfDates}}
-              {{> render component='stocktakeItem' item=this}}
-            {{/each}}
-          </tbody>
-          {{else}}
-            No history
-          {{/if}}
-        </table>
+            </thead>
+            {{#if state$listOfDates}}
+              <tbody>
+              {{#each state$listOfDates}}
+                {{> render component='stocktakeItem' item=this}}
+              {{/each}}
+              </tbody>
+            {{else}}
+              No history
+            {{/if}}
+          </table>
+        </div>
       </div>
     </div>
   </div>
