--- a/client/lib/components/suppliers/profile/profile/view.html
+++ b/client/lib/components/suppliers/profile/profile/view.html
@@ -3,7 +3,7 @@
     <div class="wrapper wrapper-content">
       <div class="ibox">
         <div class="ibox-content">
-          {{> render component="basics"}}
+          {{> render component="basics" id=state$supplierId}}
           <div class="row m-t-sm">
             <div class="col-lg-12">
               <div class="panel blank-panel">
