--- a/client/lib/components/suppliers/master_list/submit/view.html
+++ b/client/lib/components/suppliers/master_list/submit/view.html
@@ -31,7 +31,8 @@
             <label class="col-sm-4 control-label">Phone Number</label>
 
             <div class="col-sm-6 ">
-              <input type="text" class="form-control phone-number" placeholder="Add Phone Number">
+              <input type="text" class="form-control phone-number" placeholder="Add Phone Number"
+                     title="Phone number" pattern="{{phoneNumberPattern}}">
             </div>
           </div>
 
@@ -81,7 +82,8 @@
             <label class="col-sm-4 control-label">Business customer number</label>
 
             <div class="col-sm-6 ">
-              <input type="text" class="form-control customer-number" placeholder="Business customer number">
+              <input type="text" class="form-control customer-number" placeholder="Business customer number"
+                     title="Phone number" pattern="{{phoneNumberPattern}}">
             </div>
           </div>
 
