--- a/client/views/common/not-found/not-found.html
+++ b/client/views/common/not-found/not-found.html
@@ -1,13 +1,18 @@
 <template name="notFound">
-  <div class="row wrapper border-bottom white-bg">
+  <div class="row wrapper border-bottom white-bg not-found-page">
     <div class="col-lg-12">
       <div class="text-center m-lg p-lg">
         <h1>Route Not Found</h1>
 
+        <p class="url-paragraph">URL: {{currentLocation}}</p>
+
+        <hr/>
         <p>
           You can go back to main page (Dashboard)
         </p>
+
         <a href="{{pathFor route='home'}}" class="btn btn-sm btn-primary">Go to Dashboard</a>
+
       </div>
     </div>
   </div>
