Added configurations and bash-script for building

--- a/client/views/app/home/home.html
+++ b/client/views/app/home/home.html
@@ -1,5 +1,6 @@
 <template name="home">
   <div class="wrapper wrapper-content">
+    <h1>Hello!</h1>
     {{#if isInOrganization}}
       {{#if getCurrentArea}}
         <div class="row">
