Added adaptive design for send button

--- a/client/lib/components/common/text_area/view.html
+++ b/client/lib/components/common/text_area/view.html
@@ -4,7 +4,7 @@
   name="message"
   class="form-control message-input-post" placeholder=state$placeholder}}
   {{/textareaAutocomplete}}
-  <button class="submit-textarea btn btn-primary col-xs-12">
+  <button class="submit-textarea btn btn-primary col-xs-12 visible-xs visible-sm">
     Send
   </button>
 </template>
