Fixed supplier name

--- a/client/views/app/stocktake/order_recipes_list.html
+++ b/client/views/app/stocktake/order_recipes_list.html
@@ -1,6 +1,6 @@
 <template name="orderReceiptsListMainView">
   <!-- Page heading -->
-  {{> render component="pageHeading" title='Suppleir Orders Receipt' category="Stocktake"}}
+  {{> render component="pageHeading" title='Supplier Orders Receipt' category="Stocktake"}}
 
   <div class="wrapper wrapper-content">
     <div class="row">
