--- a/client/lib/components/stocktake/order_receive/list/view.html
+++ b/client/lib/components/stocktake/order_receive/list/view.html
@@ -4,7 +4,7 @@
       <div class="ibox-content">
         <div class="row">
           <div class="col-md-12">
-            <h3>What you ordered</h3>
+            <h3>What you ordered from {{supplierName state$receipt.supplier}}</h3>
             <table class="table table-hover">
               <thead>
                 <tr>
