--- a/client/views/app/stocktake/ordering_view.html
+++ b/client/views/app/stocktake/ordering_view.html
@@ -1,6 +1,6 @@
 <template name="stocktakeOrderingMainView">
   <!-- Page heading -->
-  {{> render component="pageHeading" title='Stocktake Ordering' category="Stocktake"}}
+  {{> render component="pageHeading" title='Stocktake Ordering' category="Stocktake List"}}
 
   <div class="wrapper wrapper-content">
     <div class="row">
