--- a/client/lib/components/common/text_area/view.html
+++ b/client/lib/components/common/text_area/view.html
@@ -5,6 +5,6 @@
   class="form-control message-input-post" placeholder=state$placeholder}}
   {{/textareaAutocomplete}}
   <button class="submit-textarea btn btn-sm btn-primary pull-right">
-    Send
+    {{state$buttonCaption}}
   </button>
 </template>
