--- a/client/views/app/force-forecast/view.html
+++ b/client/views/app/force-forecast/view.html
@@ -1,5 +1,8 @@
 <template name="forceForecast">
   <h1>
+    <button class="btn btn-danger import-raw">Import Revel's raw order items</button>
+  </h1>
+  <h1>
     <button class="btn btn-danger reset-data">Reset data</button>
   </h1>
   <h1>
