--- a/server/lib/notifications/templates/job-item-updated.handlebars
+++ b/server/lib/notifications/templates/job-item-updated.handlebars
@@ -1,3 +1,27 @@
+<style>
+  .button-container {
+    margin-top: 5px;
+  }
+
+  .claim-button {
+    margin-top: 5px;
+    padding: 3px 5px;
+    color: #fff;
+    border-radius: 4px;
+  }
+
+  .claim-button:hover {
+    color: #fff;
+  }
+
+  .confirm-button {
+    background-color: #1AB394;
+  }
+</style>
+
 <div>
   The job item <b>{{itemName}}</b> has been updated by <b>{{username}}</b>
+  <p class="button-container">
+    <a href="{{linkToItem}}" class="claim-button confirm-button">Go to this item</a>
+  </p>
 </div>
