--- a/server/lib/notifications/templates/new-comment.handlebars
+++ b/server/lib/notifications/templates/new-comment.handlebars
@@ -1,5 +1,28 @@
+<style>
+  .button-container {
+    margin-top: 5px;
+  }
+
+  .claim-button {
+    margin-top: 5px;
+    padding: 3px 5px;
+    color: #fff;
+    border-radius: 4px;
+  }
+
+  .claim-button:hover {
+    color: #fff;
+  }
+
+  .confirm-button {
+    background-color: #1AB394;
+  }
+</style>
+
 <div>
   New comment on <b>{{itemName}}</b> by <b>{{username}}</b>
-  <br/>
-  <a href="{{linkToItem}}" class="btn btn-primary btn-xs goToItem">Go to this item</a>
+
+  <p class="button-container">
+    <a href="{{linkToItem}}" class="claim-button confirm-button">Go to this item</a>
+  </p>
 </div>
