--- a/server/lib/notifications/templates/roster-published.handlebars
+++ b/server/lib/notifications/templates/roster-published.handlebars
@@ -1,3 +1,24 @@
+<style>
+  .button-container {
+    margin-top: 5px;
+  }
+
+  .claim-button {
+    margin-top: 5px;
+    padding: 3px 5px;
+    color: #fff;
+    border-radius: 4px;
+  }
+
+  .claim-button:hover {
+    color: #fff;
+  }
+
+  .confirm-button {
+    background-color: #1AB394;
+  }
+</style>
+
 <div>
   <b>{{publishedByName}}</b> just published the roster for the week starting <b>{{date}}</b>.
   <br><br>
@@ -16,4 +37,8 @@
       {{/each}}
     </ul>
   {{/if}}
+
+  <p class="button-container">
+    <a href="{{linkToItem}}" class="claim-button confirm-button">Go to the roster</a>
+  </p>
 </div>
