Define unavailable time ranges

--- a/client/lib/components/roster/weekly-shift-roster/weekly-roster-day/shift-basic/shift-basic.html
+++ b/client/lib/components/roster/weekly-shift-roster/weekly-roster-day/shift-basic/shift-basic.html
@@ -20,13 +20,10 @@
     </div>
 
     <div class="agile-detail">
-      <i class="fa fa-clock-o"></i>
       {{#if canEditRoster}}
         {{> shiftBasicTimeEditable shift=this}}
-        <!--{{> shiftBasicTimeEditable shift=this property="startTime" caption="start time"}} - -->
-        <!--{{> shiftBasicTimeEditable shift=this property="endTime" caption="end time"}}-->
       {{else}}
-        {{timeFormat startTime}} - {{timeFormat endTime}}
+        <i class="fa fa-clock-o"></i> {{timeFormat startTime}} - {{timeFormat endTime}}
       {{/if}}
     </div>
 
