--- a/client/lib/components/roster/weekly-shift-roster/weekly-roster-day/shift-basic/time-editable/time-editable.html
+++ b/client/lib/components/roster/weekly-shift-roster/weekly-roster-day/shift-basic/time-editable/time-editable.html
@@ -16,10 +16,11 @@
         </span>
       </div>
     </div>
-    <div class="form-group">
+    <div class="form-group row">
       <button type="button" class="cancel-button btn btn-primary"><i class="fa fa-minus-circle"></i></button>
       <button type="submit" class="edit-shift-time-button btn btn-primary"><i class="fa fa-check"></i></button>
     </div>
   </form>
+  <i class="fa fa-clock-o"></i>
   <a href="#" class="time {{timeDisplayClass}}">{{timeFormat shift.startTime}} - {{timeFormat shift.endTime}}</a>
 </template>
