--- a/server/lib/notifications/templates/new-newsfeed-comment.handlebars
+++ b/server/lib/notifications/templates/new-newsfeed-comment.handlebars
@@ -1,3 +1,28 @@
+<style>
+  .button-container {
+    margin-top: 5px;
+  }
+
+  .claim-button {
+    margin-top: 5px;
+    padding: 3px 5px;
+    color: #fff;
+    border-radius: 4px;
+  }
+
+  .claim-button:hover {
+    color: #fff;
+  }
+
+  .confirm-button {
+    background-color: #1AB394;
+  }
+</style>
+
 <div>
   There is a new comment from <b>{{username}}</b> to your newsfeed post
+
+  <p class="button-container">
+    <a href="{{linkToItem}}" class="claim-button confirm-button">Go to newsfeeds</a>
+  </p>
 </div>
