--- a/client/lib/components/roster/weekly-shift-roster/weekly-roster-day/shift-basic/time-editable/time-editable.html
+++ b/client/lib/components/roster/weekly-shift-roster/weekly-roster-day/shift-basic/time-editable/time-editable.html
@@ -16,7 +16,7 @@
         </span>
       </div>
     </div>
-    <div class="form-group row">
+    <div class="form-group">
       <button type="button" class="cancel-button btn btn-primary"><i class="fa fa-minus-circle"></i></button>
       <button type="submit" class="edit-shift-time-button btn btn-primary"><i class="fa fa-check"></i></button>
     </div>
