Added elevio script

--- a/client/views/layouts/main/main.html
+++ b/client/views/layouts/main/main.html
@@ -26,4 +26,10 @@
   </div>
   <!-- End wrapper-->
 
+  {{# if currentUser}}
+    <script>
+      var _elev = window._elev || {};(function() {var i,e;i=document.createElement("script"),i.type='text/javascript';i.async=1,i.src="https://static.elev.io/js/v3.js",e=document.getElementsByTagName("script")[0],e.parentNode.insertBefore(i,e);})();
+      _elev.account_id = '565bff7ce209b';
+    </script>
+  {{/if}}
 </template>
