Fixed styles of clock in button

--- a/client/lib/components/dashboard/clock/item/view.html
+++ b/client/lib/components/dashboard/clock/item/view.html
@@ -1,5 +1,5 @@
 <template name="clockItem">
-  <div class="widget style1 {{state$item.tag}} {{state$item.class}}" data-id="{{state$item._id}}">
+  <div class="widget {{state$item.tag}} {{state$item.class}}" data-id="{{state$item._id}}">
     <div class="row vertical-align">
       <div class="col-xs-3">
         <i class="fa umbs-up fa-3x fa-clock-o"></i>
