small css fixes for flyout

--- a/client/stylesheets/components/edit-location-form.less
+++ b/client/stylesheets/components/edit-location-form.less
@@ -1,5 +1,6 @@
 @import "../theme-globals.import.less";
 
-.edit-location-form-component {
+.edit-location-form-component,
+.edit-area-form-component {
   margin-top: 20px;
 }
