--- a/client/lib/components/organizations/areas/create_area/view.html
+++ b/client/lib/components/organizations/areas/create_area/view.html
@@ -7,7 +7,7 @@
   </div>
 
   <div class="flyout-content">
-    <form method="get" class="form-horizontal">
+    <form method="get" class="form-horizontal edit-area-form-component">
       <div class="form-group">
         <label class="col-sm-2 control-label">Area Name</label>
 
