--- a/client/stylesheets/components/suppliers.less
+++ b/client/stylesheets/components/suppliers.less
@@ -1,12 +1,19 @@
 .suppliers-table {
   tr {
-    td {
+    td, th {
       padding: 3px 5px;
 
       &:first-child {
-        text-align: right;
         font-weight: bold;
       }
     }
+
+    th {
+      text-align: center;
+    }
   }
+}
+
+#uploadPriceList {
+  margin-bottom: 10px;
 }
