--- a/client/views/app/home/home.html
+++ b/client/views/app/home/home.html
@@ -9,7 +9,7 @@
           <div class="col-md-5 col-xs-12 pull-right">
             {{> render component="shiftsSummary"}}
           </div>
-          <div class="col-md-7 col-xs-12 pull-left">
+          <div class="col-md-7 col-xs-12 pull-left margin-top-20">
             {{> render component="newsFeed" user=currentUser}}
           </div>
         </div>
