--- a/client/stylesheets/components/ghost-editable.less
+++ b/client/stylesheets/components/ghost-editable.less
@@ -17,6 +17,16 @@
     }
   }
 
+  .ghost-editable-select-trigger {
+    border-bottom: 1px dashed #0088cc;
+  }
+
+  .ghost-editable-select {
+    border: 1px solid #1ab394;
+    background-color: #fff;
+    border-radius: 0;
+  }
+
   .submit-value-button {
     color: @navy;
   }
